// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ActionList default 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-clock"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M10.6793,11.6319 L10.3143,11.9969 C10.1623,12.1479 9.9173,12.1479 9.7663,11.9969 L7.2263,9.4579 C7.1533,9.3849 7.1133,9.2869 7.1133,9.1839 L7.1133,5.5899 C7.1133,5.3769 7.2853,5.2029 7.4993,5.2029 L8.0163,5.2029 C8.2303,5.2029 8.4033,5.3769 8.4033,5.5899 L8.4033,8.6469 C8.4033,8.7499 8.4443,8.8479 8.5163,8.9209 L10.6793,11.0839 C10.8303,11.2359 10.8303,11.4809 10.6793,11.6319 M7.981,3.2823 C9.472,3.2723 10.904,3.8643 11.954,4.9233 C13.021,5.9443 13.618,7.3623 13.602,8.8393 C13.618,10.3273 13.022,11.7563 11.954,12.7923 C10.904,13.8513 9.472,14.4433 7.981,14.4333 C6.488,14.4573 5.05,13.8643 4.009,12.7923 C2.951,11.7523 2.369,10.3223 2.398,8.8393 C2.369,7.3663 2.952,5.9483 4.009,4.9233 C5.05,3.8513 6.488,3.2583 7.981,3.2823 Z M7.981,1.6783 C6.062,1.6543 4.217,2.4233 2.885,3.8043 C1.503,5.1253 0.742,6.9663 0.787,8.8773 C0.742,10.7763 1.504,12.6063 2.885,13.9113 C4.231,15.2683 6.07,16.0223 7.981,16.0003 C9.893,16.0223 11.731,15.2683 13.078,13.9113 C14.444,12.5963 15.204,10.7733 15.176,8.8773 C15.204,6.9703 14.445,5.1353 13.078,3.8043 C11.746,2.4233 9.901,1.6533 7.981,1.6783 Z M12.328,0.0003 L11.278,1.1943 L14.951,4.2893 L16,3.0583 L12.328,0.0003 Z M3.672,0.0003 L1.95399252e-14,3.0583 L1.049,4.2523 L4.684,1.1943 L3.672,0.0003 Z"
          />
        </g>
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0l2.5 5 5.5.8-4 3.9.9 5.5L8 12.6l-4.9 2.6.9-5.5-4-3.9L5.5 5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-badge"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9l-4 4h3v3l4-5c-.215-.117-3-2-3-2zm8 0s-2.881 1.906-3 2l4 5v-3h3zM8-.063l.813.914 1.1-.533.402 1.155 1.22-.071-.07 1.22 1.154.402-.532 1.1.913.813-.913.813.532 1.1-1.155.402.072 1.22-1.221-.07-.402 1.155-1.1-.533L8 9.937l-.813-.913-1.1.533-.402-1.155-1.22.07.07-1.22-1.154-.401.532-1.1L3 4.936l.913-.813-.532-1.1 1.155-.402-.072-1.22 1.221.07.402-1.154 1.1.533z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-expanded"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 2h4v5H1zm5 5h9V2H6zm-5 7h4V9H1zm5 0h9V9H6z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-folder"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 6l2 8h12l2-8zm15-2H7L5 2H1v3h14z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-tdp-negative"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.556 11.132l.579-1.101h3.532l.618 1.1H5.556zm5.827.565l-2.2-3.92a.347.347 0 0 0-.197-.16v-.84h.069a.482.482 0 0 0 0-.963H6.786a.482.482 0 0 0 0 .963h.069v.84a.347.347 0 0 0-.197.16l-2.2 3.92a.342.342 0 0 0 .299.512h6.327a.342.342 0 0 0 .299-.512zM8.997 4.103a.788.788 0 1 1-1.576 0 .788.788 0 0 1 1.576 0m1.593 1.162a.527.527 0 1 1-1.055 0 .527.527 0 0 1 1.055 0M6.352 4.73a.527.527 0 1 1-1.055.001.527.527 0 0 1 1.055 0m8.935 3.64L13.92 7.226v.828h-1.538a.313.313 0 1 0-.001.628h1.539v.833l1.367-1.145z"
        />
        <path
          d="M14.836 5.233A7.431 7.431 0 0 0 8.782.635.881.881 0 0 0 7.938 0a.882.882 0 0 0-.844.634 7.494 7.494 0 0 0-6.075 4.628l.002.001a.313.313 0 0 0 .564.267v-.002l.005-.01c.918-2.29 3.043-3.965 5.55-4.259.14.3.444.51.798.51a.88.88 0 0 0 .794-.505 6.804 6.804 0 0 1 5.518 4.19c.053.14.16.256.314.256a.315.315 0 0 0 .314-.314c0-.059-.042-.163-.042-.163m-.765 6.1c-.224 0-.339.248-.403.354a6.796 6.796 0 0 1-4.922 3.079.882.882 0 0 0-1.62-.001c-3.124-.38-5.647-2.903-5.967-6.084h2.053a.315.315 0 1 0 0-.628v-.001H.587a.086.086 0 0 0-.086.083v.022a7.457 7.457 0 0 0 .034.559h.001l.001.019c.011.098.033.276.041.332.484 3.339 3.191 5.944 6.521 6.324a.881.881 0 0 0 .836.609.882.882 0 0 0 .837-.61c2.23-.253 4.171-1.506 5.4-3.32.047-.07.203-.27.21-.427a.306.306 0 0 0-.31-.31"
        />
      </svg>
    </symbol>
  </svg>
  <div
    style={
      Object {
        "display": "inline-table",
      }
    }
  >
    <ul
      className="nav nav-pills nav-stacked theme-tc-action-list tc-action-list"
    >
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Recent datasets"
      >
        <button
          aria-label="Recent datasets"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-recent-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-clock"
            title={null}
          >
            <use
              xlinkHref="#talend-clock"
            />
          </svg>
          <span>
            Recent datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item active theme-active"
        role="presentation"
        title="Favorite datasets"
      >
        <button
          aria-label="Favorite datasets"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-favorite-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-star"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
          <span>
            Favorite datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Certified datasets"
      >
        <button
          aria-label="Certified datasets"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-certified-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-badge"
            title={null}
          >
            <use
              xlinkHref="#talend-badge"
            />
          </svg>
          <span>
            Certified datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="All datasets"
      >
        <button
          aria-label="All datasets"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-all-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-expanded"
            title={null}
          >
            <use
              xlinkHref="#talend-expanded"
            />
          </svg>
          <span>
            All datasets
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Import file"
      >
        <button
          aria-label="Import file"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-import-file"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-folder"
            title={null}
          >
            <use
              xlinkHref="#talend-folder"
            />
          </svg>
          <span>
            Import file
          </span>
        </button>
      </li>
      <li
        className="theme-tc-action-list-item tc-action-list-item"
        role="presentation"
        title="Use magic"
      >
        <button
          aria-label="Use magic"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-use-magic"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-tdp-negative"
            title={null}
          >
            <use
              xlinkHref="#talend-tdp-negative"
            />
          </svg>
          <span>
            Use magic
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots ActionList single 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-clock"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M10.6793,11.6319 L10.3143,11.9969 C10.1623,12.1479 9.9173,12.1479 9.7663,11.9969 L7.2263,9.4579 C7.1533,9.3849 7.1133,9.2869 7.1133,9.1839 L7.1133,5.5899 C7.1133,5.3769 7.2853,5.2029 7.4993,5.2029 L8.0163,5.2029 C8.2303,5.2029 8.4033,5.3769 8.4033,5.5899 L8.4033,8.6469 C8.4033,8.7499 8.4443,8.8479 8.5163,8.9209 L10.6793,11.0839 C10.8303,11.2359 10.8303,11.4809 10.6793,11.6319 M7.981,3.2823 C9.472,3.2723 10.904,3.8643 11.954,4.9233 C13.021,5.9443 13.618,7.3623 13.602,8.8393 C13.618,10.3273 13.022,11.7563 11.954,12.7923 C10.904,13.8513 9.472,14.4433 7.981,14.4333 C6.488,14.4573 5.05,13.8643 4.009,12.7923 C2.951,11.7523 2.369,10.3223 2.398,8.8393 C2.369,7.3663 2.952,5.9483 4.009,4.9233 C5.05,3.8513 6.488,3.2583 7.981,3.2823 Z M7.981,1.6783 C6.062,1.6543 4.217,2.4233 2.885,3.8043 C1.503,5.1253 0.742,6.9663 0.787,8.8773 C0.742,10.7763 1.504,12.6063 2.885,13.9113 C4.231,15.2683 6.07,16.0223 7.981,16.0003 C9.893,16.0223 11.731,15.2683 13.078,13.9113 C14.444,12.5963 15.204,10.7733 15.176,8.8773 C15.204,6.9703 14.445,5.1353 13.078,3.8043 C11.746,2.4233 9.901,1.6533 7.981,1.6783 Z M12.328,0.0003 L11.278,1.1943 L14.951,4.2893 L16,3.0583 L12.328,0.0003 Z M3.672,0.0003 L1.95399252e-14,3.0583 L1.049,4.2523 L4.684,1.1943 L3.672,0.0003 Z"
          />
        </g>
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0l2.5 5 5.5.8-4 3.9.9 5.5L8 12.6l-4.9 2.6.9-5.5-4-3.9L5.5 5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-badge"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9l-4 4h3v3l4-5c-.215-.117-3-2-3-2zm8 0s-2.881 1.906-3 2l4 5v-3h3zM8-.063l.813.914 1.1-.533.402 1.155 1.22-.071-.07 1.22 1.154.402-.532 1.1.913.813-.913.813.532 1.1-1.155.402.072 1.22-1.221-.07-.402 1.155-1.1-.533L8 9.937l-.813-.913-1.1.533-.402-1.155-1.22.07.07-1.22-1.154-.401.532-1.1L3 4.936l.913-.813-.532-1.1 1.155-.402-.072-1.22 1.221.07.402-1.154 1.1.533z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-expanded"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 2h4v5H1zm5 5h9V2H6zm-5 7h4V9H1zm5 0h9V9H6z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-folder"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 6l2 8h12l2-8zm15-2H7L5 2H1v3h14z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-tdp-negative"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.556 11.132l.579-1.101h3.532l.618 1.1H5.556zm5.827.565l-2.2-3.92a.347.347 0 0 0-.197-.16v-.84h.069a.482.482 0 0 0 0-.963H6.786a.482.482 0 0 0 0 .963h.069v.84a.347.347 0 0 0-.197.16l-2.2 3.92a.342.342 0 0 0 .299.512h6.327a.342.342 0 0 0 .299-.512zM8.997 4.103a.788.788 0 1 1-1.576 0 .788.788 0 0 1 1.576 0m1.593 1.162a.527.527 0 1 1-1.055 0 .527.527 0 0 1 1.055 0M6.352 4.73a.527.527 0 1 1-1.055.001.527.527 0 0 1 1.055 0m8.935 3.64L13.92 7.226v.828h-1.538a.313.313 0 1 0-.001.628h1.539v.833l1.367-1.145z"
        />
        <path
          d="M14.836 5.233A7.431 7.431 0 0 0 8.782.635.881.881 0 0 0 7.938 0a.882.882 0 0 0-.844.634 7.494 7.494 0 0 0-6.075 4.628l.002.001a.313.313 0 0 0 .564.267v-.002l.005-.01c.918-2.29 3.043-3.965 5.55-4.259.14.3.444.51.798.51a.88.88 0 0 0 .794-.505 6.804 6.804 0 0 1 5.518 4.19c.053.14.16.256.314.256a.315.315 0 0 0 .314-.314c0-.059-.042-.163-.042-.163m-.765 6.1c-.224 0-.339.248-.403.354a6.796 6.796 0 0 1-4.922 3.079.882.882 0 0 0-1.62-.001c-3.124-.38-5.647-2.903-5.967-6.084h2.053a.315.315 0 1 0 0-.628v-.001H.587a.086.086 0 0 0-.086.083v.022a7.457 7.457 0 0 0 .034.559h.001l.001.019c.011.098.033.276.041.332.484 3.339 3.191 5.944 6.521 6.324a.881.881 0 0 0 .836.609.882.882 0 0 0 .837-.61c2.23-.253 4.171-1.506 5.4-3.32.047-.07.203-.27.21-.427a.306.306 0 0 0-.31-.31"
        />
      </svg>
    </symbol>
  </svg>
  <div
    style={
      Object {
        "display": "inline-table",
      }
    }
  >
    <ul
      className="nav nav-pills nav-stacked theme-tc-action-list tc-action-list"
    >
      <li
        className="theme-tc-action-list-item tc-action-list-item active theme-active"
        role="presentation"
        title="Favorite datasets"
      >
        <button
          aria-label="Favorite datasets"
          className="btn btn-link"
          data-feature="actionlist.item"
          disabled={false}
          id="context-nav-favorite-datasets"
          onClick={[Function]}
          onMouseDown={[Function]}
          role={null}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            name="talend-star"
            title={null}
          >
            <use
              xlinkHref="#talend-star"
            />
          </svg>
          <span>
            Favorite datasets
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots ActionList with custom class names 1`] = `
<div>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-clock"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M10.6793,11.6319 L10.3143,11.9969 C10.1623,12.1479 9.9173,12.1479 9.7663,11.9969 L7.2263,9.4579 C7.1533,9.3849 7.1133,9.2869 7.1133,9.1839 L7.1133,5.5899 C7.1133,5.3769 7.2853,5.2029 7.4993,5.2029 L8.0163,5.2029 C8.2303,5.2029 8.4033,5.3769 8.4033,5.5899 L8.4033,8.6469 C8.4033,8.7499 8.4443,8.8479 8.5163,8.9209 L10.6793,11.0839 C10.8303,11.2359 10.8303,11.4809 10.6793,11.6319 M7.981,3.2823 C9.472,3.2723 10.904,3.8643 11.954,4.9233 C13.021,5.9443 13.618,7.3623 13.602,8.8393 C13.618,10.3273 13.022,11.7563 11.954,12.7923 C10.904,13.8513 9.472,14.4433 7.981,14.4333 C6.488,14.4573 5.05,13.8643 4.009,12.7923 C2.951,11.7523 2.369,10.3223 2.398,8.8393 C2.369,7.3663 2.952,5.9483 4.009,4.9233 C5.05,3.8513 6.488,3.2583 7.981,3.2823 Z M7.981,1.6783 C6.062,1.6543 4.217,2.4233 2.885,3.8043 C1.503,5.1253 0.742,6.9663 0.787,8.8773 C0.742,10.7763 1.504,12.6063 2.885,13.9113 C4.231,15.2683 6.07,16.0223 7.981,16.0003 C9.893,16.0223 11.731,15.2683 13.078,13.9113 C14.444,12.5963 15.204,10.7733 15.176,8.8773 C15.204,6.9703 14.445,5.1353 13.078,3.8043 C11.746,2.4233 9.901,1.6533 7.981,1.6783 Z M12.328,0.0003 L11.278,1.1943 L14.951,4.2893 L16,3.0583 L12.328,0.0003 Z M3.672,0.0003 L1.95399252e-14,3.0583 L1.049,4.2523 L4.684,1.1943 L3.672,0.0003 Z"
          />
        </g>
      </svg>
    </symbol>
    <symbol
      id="talend-star"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 0l2.5 5 5.5.8-4 3.9.9 5.5L8 12.6l-4.9 2.6.9-5.5-4-3.9L5.5 5z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-badge"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 9l-4 4h3v3l4-5c-.215-.117-3-2-3-2zm8 0s-2.881 1.906-3 2l4 5v-3h3zM8-.063l.813.914 1.1-.533.402 1.155 1.22-.071-.07 1.22 1.154.402-.532 1.1.913.813-.913.813.532 1.1-1.155.402.072 1.22-1.221-.07-.402 1.155-1.1-.533L8 9.937l-.813-.913-1.1.533-.402-1.155-1.22.07.07-1.22-1.154-.401.532-1.1L3 4.936l.913-.813-.532-1.1 1.155-.402-.072-1.22 1.221.07.402-1.154 1.1.533z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-expanded"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 2h4v5H1zm5 5h9V2H6zm-5 7h4V9H1zm5 0h9V9H6z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-folder"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 6l2 8h12l2-8zm15-2H7L5 2H1v3h14z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-tdp-negative"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.556 11.132l.579-1.101h3.532l.618 1.1H5.556zm5.827.565l-2.2-3.92a.347.347 0 0 0-.197-.16v-.84h.069a.482.482 0 0 0 0-.963H6.786a.482.482 0 0 0 0 .963h.069v.84a.347.347 0 0 0-.197.16l-2.2 3.92a.342.342 0 0 0 .299.512h6.327a.342.342 0 0 0 .299-.512zM8.997 4.103a.788.788 0 1 1-1.576 0 .788.788 0 0 1 1.576 0m1.593 1.162a.527.527 0 1 1-1.055 0 .527.527 0 0 1 1.055 0M6.352 4.73a.527.527 0 1 1-1.055.001.527.527 0 0 1 1.055 0m8.935 3.64L13.92 7.226v.828h-1.538a.313.313 0 1 0-.001.628h1.539v.833l1.367-1.145z"
        />
        <path
          d="M14.836 5.233A7.431 7.431 0 0 0 8.782.635.881.881 0 0 0 7.938 0a.882.882 0 0 0-.844.634 7.494 7.494 0 0 0-6.075 4.628l.002.001a.313.313 0 0 0 .564.267v-.002l.005-.01c.918-2.29 3.043-3.965 5.55-4.259.14.3.444.51.798.51a.88.88 0 0 0 .794-.505 6.804 6.804 0 0 1 5.518 4.19c.053.14.16.256.314.256a.315.315 0 0 0 .314-.314c0-.059-.042-.163-.042-.163m-.765 6.1c-.224 0-.339.248-.403.354a6.796 6.796 0 0 1-4.922 3.079.882.882 0 0 0-1.62-.001c-3.124-.38-5.647-2.903-5.967-6.084h2.053a.315.315 0 1 0 0-.628v-.001H.587a.086.086 0 0 0-.086.083v.022a7.457 7.457 0 0 0 .034.559h.001l.001.019c.011.098.033.276.041.332.484 3.339 3.191 5.944 6.521 6.324a.881.881 0 0 0 .836.609.882.882 0 0 0 .837-.61c2.23-.253 4.171-1.506 5.4-3.32.047-.07.203-.27.21-.427a.306.306 0 0 0-.31-.31"
        />
      </svg>
    </symbol>
  </svg>
  <div>
    <p>
      You can add your custom classnames to the container and items
    </p>
    <pre>
      
      .custom-container-classname {
      	border: 5px solid turquoise;
      }
      
      .custom-item-classname {
      	background-color: pink;
      }
      					
    </pre>
    <pre>
      
      &lt;ActionList
      	className={'custom-container-classname'}
      	itemClassName={'custom-item-classname'}
      	{...otherProps}
      /&gt;
      			
    </pre>
    <style>
      .custom-container-classname {
      						border: 5px solid turquoise;
      					}
      
      					.custom-item-classname {
      						background-color: pink;
      					}
    </style>
    <div
      style={
        Object {
          "display": "inline-table",
        }
      }
    >
      <ul
        className="nav nav-pills nav-stacked theme-tc-action-list tc-action-list custom-container-classname"
      >
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname"
          role="presentation"
          title="Recent datasets"
        >
          <button
            aria-label="Recent datasets"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-recent-datasets"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-clock"
              title={null}
            >
              <use
                xlinkHref="#talend-clock"
              />
            </svg>
            <span>
              Recent datasets
            </span>
          </button>
        </li>
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname active theme-active"
          role="presentation"
          title="Favorite datasets"
        >
          <button
            aria-label="Favorite datasets"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-favorite-datasets"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-star"
              title={null}
            >
              <use
                xlinkHref="#talend-star"
              />
            </svg>
            <span>
              Favorite datasets
            </span>
          </button>
        </li>
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname"
          role="presentation"
          title="Certified datasets"
        >
          <button
            aria-label="Certified datasets"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-certified-datasets"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-badge"
              title={null}
            >
              <use
                xlinkHref="#talend-badge"
              />
            </svg>
            <span>
              Certified datasets
            </span>
          </button>
        </li>
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname"
          role="presentation"
          title="All datasets"
        >
          <button
            aria-label="All datasets"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-all-datasets"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-expanded"
              title={null}
            >
              <use
                xlinkHref="#talend-expanded"
              />
            </svg>
            <span>
              All datasets
            </span>
          </button>
        </li>
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname"
          role="presentation"
          title="Import file"
        >
          <button
            aria-label="Import file"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-import-file"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-folder"
              title={null}
            >
              <use
                xlinkHref="#talend-folder"
              />
            </svg>
            <span>
              Import file
            </span>
          </button>
        </li>
        <li
          className="theme-tc-action-list-item tc-action-list-item custom-item-classname"
          role="presentation"
          title="Use magic"
        >
          <button
            aria-label="Use magic"
            className="btn btn-link"
            data-feature="actionlist.item"
            disabled={false}
            id="context-nav-use-magic"
            onClick={[Function]}
            onMouseDown={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              name="talend-tdp-negative"
              title={null}
            >
              <use
                xlinkHref="#talend-tdp-negative"
              />
            </svg>
            <span>
              Use magic
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
